name:                haskeline-brick
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/rootmos/haskeline-brick#readme
license:             BSD3
license-file:        LICENSE
author:              Gustav Behm
maintainer:          gustav.behm@gmail.com
copyright:           2017 Gustav Behm
category:            User Interfaces
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Console.Haskeline.Brick
  build-depends:       base >= 4.7 && < 5
                     , brick >= 0.18
                     , vty >= 5.16
                     , haskeline
                     , transformers >= 0.2 && < 0.6
  default-language:    Haskell2010

executable haskeline-brick-example
  hs-source-dirs:      example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline-brick
                     , haskeline
                     , brick >= 0.18
                     , vty >= 5.16
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rootmos/haskeline-brick
